k8s/ingress/redirect-network-of-terms-demo.yml
# See https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: redirect-network-of-terms-demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/permanent-redirect: https://termennetwerk.netwerkdigitaalerfgoed.nl
spec:
  rules:
    - host: demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /termennetwerk
            backend: # unused, but each rule must have a backend
              serviceName: demo
              servicePort: 80
